--- a/.github/workflows/update-leaderboard-and-resize-images.yml
+++ b/.github/workflows/update-leaderboard-and-resize-images.yml
@@ -29,7 +29,7 @@ jobs:
           git config --global user.email "lordtitan7@gmail.com"
           git config --global user.name "mlsanigeria"
 
-      - name: Pass Environment Variables and Run Scripts
+      - name: Pass Environment Variables and Run Script
         env:
           API_TOKEN: ${{ secrets.API_TOKEN }}
           
