--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ OPENAI_API_VERSION=
 SUBSCRIPTION_KEY=
 SPEECH_KEY=
 SPEECH_REGION=
+DOCUMENT_INTELLIGENCE_ENDPOINT=
+DOCUMENT_INTELLIGENCE_SUBSCRIPTION_KEY=
