Updated Document Intelligence Function

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ OPENAI_API_VERSION=
 SUBSCRIPTION_KEY=
 SPEECH_KEY=
 SPEECH_REGION=
-DOCUMENT_INTELLIGENCE_ENDPOINT=
-DOCUMENT_INTELLIGENCE_SUBSCRIPTION_KEY=
+DOCUMENT_INTELLIGENCE_ENDPOINT= #input your endpoint from document intelligence resource created in Azure
+DOCUMENT_INTELLIGENCE_SUBSCRIPTION_KEY= #input your subscription key from document intelligence resource created in Azure
