--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 langchain==0.2.16
+langchain-community==0.2.12
 langchain-core==0.2.41
 langchain-text-splitters==0.2.4
 langsmith==0.1.128
