Added a resource on OpenAI Models Deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 API_KEY=
 ENDPOINT=
-OPENAI_API_VERSION=
+OPENAI_API_VERSION= #input the version of the openai large language model
+MODEL_API_VERSION= #input the version of the openai embedding model
 SPEECH_KEY=
 SPEECH_REGION=
 DOCUMENT_INTELLIGENCE_ENDPOINT= #input your endpoint from document intelligence resource created in Azure
