--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 API_KEY=
 ENDPOINT=
-OPENAI_API_VERSION= #input the version of the openai large language model
-MODEL_API_VERSION= #input the version of the openai embedding model
+OPENAI_API_VERSION= #input the version of the openai 
 SPEECH_KEY=
 SPEECH_REGION=
 DOCUMENT_INTELLIGENCE_ENDPOINT= #input your endpoint from document intelligence resource created in Azure
