Update .env.example as new change is ambiguous and could mean python library version of openai

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 API_KEY=
 ENDPOINT=
-OPENAI_API_VERSION= #input the version of the openai 
+OPENAI_API_VERSION=
 SPEECH_KEY=
 SPEECH_REGION=
 DOCUMENT_INTELLIGENCE_ENDPOINT= #input your endpoint from document intelligence resource created in Azure
