--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,20 @@ altair==5.4.1
 annotated-types==0.7.0
 anyio==4.6.0
 attrs==24.2.0
-azure-ai-formrecognizer==3.3.3 
-azure-identity==1.19.0
+azure-ai-formrecognizer==3.3.3
 azure-cognitiveservices-speech==1.40.0
+azure-common==1.1.28
+azure-core==1.31.0
+azure-identity==1.19.0
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==43.0.3
+dataclasses-json==0.6.7
+docarray==0.40.0
 frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.43
@@ -21,6 +27,7 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.2
 idna==3.10
+isodate==0.7.2
 Jinja2==3.1.4
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -31,23 +38,33 @@ langchain-community==0.2.12
 langchain-core==0.2.41
 langchain-text-splitters==0.2.4
 langsmith==0.1.128
+lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.23.0
 mdurl==0.1.2
+msal==1.31.0
+msal-extensions==1.2.0
+msrest==0.7.1
 multidict==6.1.0
+mypy-extensions==1.0.0
 narwhals==1.8.3
 numpy==1.26.4
+oauthlib==3.2.2
 openai==0.28.1
 orjson==3.10.7
 packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
+portalocker==2.10.1
 protobuf==5.28.2
 pyarrow==17.0.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
+PyJWT==2.9.0
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -56,6 +73,7 @@ pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
+requests-oauthlib==2.0.0
 rich==13.8.1
 rpds-py==0.20.0
 six==1.16.0
@@ -67,8 +85,11 @@ tenacity==8.5.0
 toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
+types-requests==2.32.0.20241016
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+Werkzeug==3.0.4
+XlsxWriter==3.2.0
 yarl==1.12.1
-werkzeug==3.0.4
