--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ python-pptx==1.0.2
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
+regex==2024.9.11
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.8.1
@@ -82,6 +83,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.35
 streamlit==1.39.0
 tenacity==8.5.0
+tiktoken==0.8.0
 toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
