fix: update .env.example with more details

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ SPEECH_KEY=
 SPEECH_REGION=
 DOCUMENT_INTELLIGENCE_ENDPOINT= #input your endpoint from document intelligence resource created in Azure
 DOCUMENT_INTELLIGENCE_SUBSCRIPTION_KEY= #input your subscription key from document intelligence resource created in Azure
+OPENAI_CHAT_DEPLOYMENT= #input your deployment from openai resource created in Azure, should be compatible with chat completions
+OPENAI_DEPLOYMENT= #input your deployment from openai resource created in Azure, should be compatible with text embeddings
